init evice bridge
