# controllers/device.go
@@ -1,25 +1,30 @@
 package controllers
 
 import (
+	"errors"
 	"net/http"
 	"strconv"
+	"strings"
 
-	"github.com/maxiiot/vbaseBridge/backend/server"
+	"github.com/maxiiot/devicebridge/backend/server"
 
-	"github.com/maxiiot/vbaseBridge/storage"
+	"github.com/maxiiot/devicebridge/storage"
 
 	"github.com/gin-gonic/gin"
 )
 
 // Device for request device.
 type Device struct {
-	DeviceEUI string `json:"device_eui" binding:"required"`
-	Name      string `json:"name" binding:"required"`
-	Icon      string `json:"icon"`
+	DeviceEUI    string `json:"device_eui" binding:"required"`
+	ProtocolType string `json:"protocol_type"`
 }
 
-func (dev Device) validate() error {
-
+func (dev *Device) validate() error {
+	dev.ProtocolType = strings.ToLower(dev.ProtocolType)
+	if dev.ProtocolType != storage.ProtocolHumiture && dev.ProtocolType != storage.ProtocolSmoke &&
+		dev.ProtocolType != storage.ProtocolDefault {
+		return errors.New("Unsupported device protocol.optional(humiture/smoke/digital)")
+	}
 	return nil
 }
 
@@ -31,8 +36,7 @@ func (dev Device) toStorageDevice() (storage.Device, error) {
 		return sDev, err
 	}
 	sDev.DeviceEUI = devEUI
-	sDev.Name = dev.Name
-	sDev.Icon = dev.Icon
+	sDev.ProtocolType = dev.ProtocolType
 	return sDev, nil
 }
 
@@ -50,25 +54,30 @@ func CreateDevice(c *gin.Context) {
 	var dev Device
 	err := c.ShouldBind(&dev)
 	if err != nil {
-		Response(c, http.StatusBadRequest, 1, 1, err.Error(), nil)
+		Response(c, http.StatusBadRequest, 1, err.Error(), nil)
+		return
+	}
+
+	if err = dev.validate(); err != nil {
+		Response(c, http.StatusBadRequest, 1, err.Error(), nil)
 		return
 	}
 
 	sDev, err := dev.toStorageDevice()
 	if err != nil {
-		Response(c, http.StatusInternalServerError, 1, 1, err.Error(), nil)
+		Response(c, http.StatusInternalServerError, 1, err.Error(), nil)
 		return
 	}
 
 	err = storage.CreateDevice(sDev)
 	if err != nil {
-		Response(c, http.StatusInternalServerError, 1, 1, err.Error(), nil)
+		Response(c, http.StatusInternalServerError, 1, err.Error(), nil)
 		return
 	}
 
 	server.Serv.OnDeviceChange(map[string]bool{dev.DeviceEUI: true})
 
-	Response(c, http.StatusOK, 0, 0, "success", nil)
+	Response(c, http.StatusOK, 0, "success", nil)
 }
 
 // @summary 设备列表
@@ -88,13 +97,13 @@ func ListDevice(c *gin.Context) {
 
 	page, err := strconv.Atoi(_page)
 	if err != nil || page < 1 {
-		Response(c, http.StatusBadRequest, 0, 1, "page must be >=1", nil)
+		Response(c, http.StatusBadRequest, 1, "page must be >=1", nil)
 		return
 	}
 
 	perpage, err := strconv.Atoi(_perpage)
 	if err != nil || perpage <= 0 {
-		Response(c, http.StatusBadRequest, 0, 1, "perpage must be >0", nil)
+		Response(c, http.StatusBadRequest, 1, "perpage must be >0", nil)
 		return
 	}
 
@@ -103,17 +112,17 @@ func ListDevice(c *gin.Context) {
 
 	devs, err := storage.GetDevices(limit, offset)
 	if err != nil {
-		Response(c, http.StatusInternalServerError, 0, 1, err.Error(), nil)
+		Response(c, http.StatusInternalServerError, 1, err.Error(), nil)
 		return
 	}
 
 	count, err := storage.GetDevicesCount()
 	if err != nil {
-		Response(c, http.StatusInternalServerError, 0, 1, err.Error(), nil)
+		Response(c, http.StatusInternalServerError, 1, err.Error(), nil)
 		return
 	}
 
-	Response(c, http.StatusOK, 0, 0, "success", gin.H{
+	Response(c, http.StatusOK, 0, "success", gin.H{
 		"total":   count,
 		"devices": devs,
 	})
@@ -132,17 +141,17 @@ func ListDevice(c *gin.Context) {
 func GetDevice(c *gin.Context) {
 	eui := c.Param("dev_eui")
 	if eui == "" {
-		Response(c, http.StatusBadRequest, 0, 1, "please provide dev_eu param", nil)
+		Response(c, http.StatusBadRequest, 1, "please provide dev_eu param", nil)
 		return
 	}
 
 	dev, err := storage.GetDeviceByEUI(eui)
 	if err != nil {
-		Response(c, http.StatusInternalServerError, 0, 1, err.Error(), nil)
+		Response(c, http.StatusInternalServerError, 1, err.Error(), nil)
 		return
 	}
 
-	Response(c, http.StatusOK, 0, 0, "success", dev)
+	Response(c, http.StatusOK, 0, "success", dev)
 }
 
 // @summary 修改设备
@@ -159,23 +168,28 @@ func UpdateDevice(c *gin.Context) {
 	var dev Device
 	err := c.ShouldBind(&dev)
 	if err != nil {
-		Response(c, http.StatusBadRequest, 1, 1, err.Error(), nil)
+		Response(c, http.StatusBadRequest, 1, err.Error(), nil)
+		return
+	}
+
+	if err := dev.validate(); err != nil {
+		Response(c, http.StatusBadRequest, 1, err.Error(), nil)
 		return
 	}
 
 	sDev, err := dev.toStorageDevice()
 	if err != nil {
-		Response(c, http.StatusInternalServerError, 1, 1, err.Error(), nil)
+		Response(c, http.StatusInternalServerError, 1, err.Error(), nil)
 		return
 	}
 
 	err = storage.UpdateDevice(sDev)
 	if err != nil {
-		Response(c, http.StatusInternalServerError, 1, 1, err.Error(), nil)
+		Response(c, http.StatusInternalServerError, 1, err.Error(), nil)
 		return
 	}
 
-	Response(c, http.StatusOK, 0, 0, "success", nil)
+	Response(c, http.StatusOK, 0, "success", nil)
 }
 
 // @summary 删除设备
@@ -191,17 +205,17 @@ func UpdateDevice(c *gin.Context) {
 func DeleteDevice(c *gin.Context) {
 	eui := c.Param("dev_eui")
 	if eui == "" {
-		Response(c, http.StatusBadRequest, 0, 1, "please provide dev_eu param", nil)
+		Response(c, http.StatusBadRequest, 1, "please provide dev_eu param", nil)
 		return
 	}
 
 	err := storage.DeleteDevice(eui)
 	if err != nil {
-		Response(c, http.StatusBadRequest, 0, 1, err.Error(), nil)
+		Response(c, http.StatusBadRequest, 1, err.Error(), nil)
 		return
 	}
 
 	server.Serv.OnDeviceChange(map[string]bool{eui: false})
 
-	Response(c, http.StatusOK, 0, 0, "success", nil)
+	Response(c, http.StatusOK, 0, "success", nil)
 }
